trigger-framework/main/main/default/objects/Trigger_Dispatcher__mdt/Trigger_Dispatcher__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Dispatcher</label>
    <pluralLabel>Trigger Dispatchers</pluralLabel>
</CustomObject>