trigger-framework/main/main/default/objects/Trigger_Dispatcher__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Add the sobject API Name.</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>