trigger-framework/main/main/default/objects/Trigger_Dispatcher__mdt/fields/Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Ordinal__c</fullName>
    <description>Add the class order to call.</description>
    <label>Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>