trigger-framework/main/main/default/objects/Trigger_Dispatcher__mdt/fields/Trigger_Handler_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Handler_Class_Name__c</fullName>
    <description>Add the class name to call from trigger.</description>
    <label>Trigger Handler Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>